<resources>
    <string name="app_name">Fitness_App</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_to_fitness_app">WELCOME TO FITNESS APP</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">LOG IN</string>
    <string name="register_a_new_account">Register a new account</string>
    <string name="enter_confirmation_code">Enter confirmation code</string>
    <string name="confirm">Confirm</string>
    <string name="password_at_least_5_characters">Password (at least 5 characters)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email_address">Email Address</string>
    <string name="d_o_b_dd_mm_yyyy">D.O.B (dd/mm/yyyy)</string>
    <string name="register">Register</string>
    <string name="Facebook_Login">264637580744082</string>
    <string name="fb_login_protocol_scheme">fb264637580744082</string>
</resources>
